<resources>
    <string name="app_name">Gestor de inversiones online</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="button_send_login">Entrar</string>
    <string name="button_create_user">Crear Usuario</string>
    <string name="edit_name">Nombre</string>
    <string name="create_investments">Crear inversiones</string>
    <string name="create_term_deposit">Crear plazo fijo</string>
    <string name="amount">Cantidad</string>
    <string name="button_create_term_deposit">Crear plazo fijo</string>
    <string name="duration_term_deposit_prompt">Seleccione la duracion</string>
    <string name="duration">Duracion</string>
    <string name="rate">Tasa</string>
    <string name="interest">Interes</string>
    <string name="logout">Salir</string>
    <string name="title_dashboard_list">Plazos fijos activos</string>
    <string name="force">Acreditar</string>
    <string name="investment_dialog_title">Evento de inversion</string>
    <string name="investment_ok">Adquirir</string>
    <string name="investment_cancel">Pasar</string>
    <string name="title_investments_list">Inversiones casuales</string>
    <string name="concept_dialog_default_title">Concepto financiero</string>

    <string-array name="duration_term_deposit_entries">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>180</item>
        <item>360</item>
    </string-array>
</resources>
